--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,44 @@
-.gradle
-**/build/
-!src/**/build/
+### Common Build Deploy ###
+**/manifest-generated.yml
 
-# Ignore Gradle GUI config
+### Build Output Directories (Combined) ###
+build/
+bin/
+classes/
+out/
+target/
+log/
+
+### Gradle ###
+.gradle/
+
+### Maven ###
+.mvn/
+
+### System file
+.DS_store
+
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
+.settings/
+.classpath
+.project
+.metadata
+.springBeans
+
+### Ignore Gradle GUI config ###
 gradle-app.setting
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+### Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored) ###
 !gradle-wrapper.jar
 
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
-# Cache of project
+### Cache of project ###
 .gradletasknamecache
 
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
